Change the sample to the power-surge-app